Bootstrap bis table hinzugefügt

--- a/webroot/css/frontend/bootstrap.css
+++ b/webroot/css/frontend/bootstrap.css
@@ -1515,7 +1515,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 code {
   padding: 2px 4px;
