Bootstrap bis einschließlich Forms hinzugefügt

--- a/webroot/css/frontend/bootstrap.css
+++ b/webroot/css/frontend/bootstrap.css
@@ -1169,7 +1169,7 @@ h6,
 .h6 {
   font-family: inherit;
   font-weight: 500;
-  line-height: 1.1;
+  line-height: ;
   color: inherit;
 }
 h1 small,
@@ -3483,10 +3483,10 @@ tbody.collapse.in {
   height: 0;
   margin-left: 2px;
   vertical-align: middle;
-  border-top: 4px dashed;
-  border-top: 4px solid \9;
-  border-right: 4px solid transparent;
-  border-left: 4px solid transparent;
+  border-top: 5px dashed;
+  border-top: 5px solid \9;
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
 }
 .dropup,
 .dropdown {
@@ -3599,8 +3599,8 @@ tbody.collapse.in {
 .dropup .caret,
 .navbar-fixed-bottom .dropdown .caret {
   border-top: 0;
-  border-bottom: 4px dashed;
-  border-bottom: 4px solid \9;
+  border-bottom: 5px dashed;
+  border-bottom: 5px solid \9;
   content: "";
 }
 .dropup .dropdown-menu,
